--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs-extra": "^7.0.0",
+    "ilp-connector": "^22.1.0",
+    "ilp-plugin-btp": "^1.3.2",
+    "ilp-protocol-ildcp": "^2.0.0",
     "koa": "^2.5.3",
     "koa-router": "^7.4.0"
   }
