--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
     "ilp-protocol-ildcp": "^2.0.0",
     "koa": "^2.5.3",
     "koa-router": "^7.4.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-2017": "0.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "webpack": "^4.19.0",
+    "webpack-command": "^0.4.1",
+    "webpack-dev-server": "^3.1.8"
   }
 }
