--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "http-proxy": "^1.17.0",
     "ilp-connector": "^22.1.0",
     "ilp-plugin-btp": "^1.3.2",
+    "ilp-plugin-mini-accounts": "^3.5.1",
     "ilp-protocol-ildcp": "^2.0.0",
+    "ilp-store-memory": "^1.0.0",
     "koa": "^2.5.3",
     "koa-router": "^7.4.0",
     "ws": "^6.0.0"
